# AeroRadomeSim

./: CITATION.cff  How to cite  LICENSE  README.md  aeroradomesim.bib  pyproject.toml  zenodo. json
.github/workflows/: build-report.yml  figs.yml  latex.yml  main.yaml
paper/: paper.bib  paper.md
report/: main.tex  make_figures.py
scripts/: make_figs.py
src/aeroradomesim/: __init__.py  aero.py  radome_rf.py
src/aeroradomesim/tests/: test_aero.py
tests/: test_radome.py
